SLVSCODE-381 Hotspots rule description: use tabbed description